--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,11 @@
     "stage-0"
   ],
   "plugins": [
+    ["module-resolver", {
+      "alias": {
+        "root": "./",
+      }
+    }],    
     ["transform-object-rest-spread"]
   ]
 }
